--- a/style.css
+++ b/style.css
@@ -29,8 +29,75 @@ padding: 14px;
 text-decoration: none;
 }
 
+/* The progress container (grey background) */
+.progress-container {
+    position: sticky;
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+    height: 8px;
+    background: #04AA6D;
+    width: 0%;
+}
+
+
+/* Style the tab */
+.tab {
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 20;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+    border: none;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #818181;
+    display: block;
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    transition: 0.3s;
+    float: none;
+
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    color: #f1f1f1;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #04aa6d;
+    color: #f1f1f2;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 16px;
+    margin-left: 160px;
+    border: 1px solid #ccc;
+}
+
 /* Page content */
 .content {
+    margin-left: 160px;
     padding: 16px;
 }
 
@@ -53,4 +120,15 @@ footer {
     padding: 1rem;
     background-color: #333;
     color: white;
+}
+
+/* On smaller screens */
+@media screen and (max-height: 450px) {
+    .tab {
+        padding-top: 15px;
+    }
+    .tab button {
+        padding: 6px 8px 6px 16px;
+        font-size: 14px;
+    }
 }
