--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ text-decoration: none;
     width: 100%;
     height: 8px;
     background: #ccc;
+    z-index : 1;
 }
 
 /* The progress bar (scroll indicator) */
@@ -46,73 +47,49 @@ text-decoration: none;
 
 
 /* Style the tab */
-.tab {
-    width: 160px;
+.sidenav {
+    width: 130px;
     position: fixed;
     z-index: 1;
-    top: 20;
-    left: 0;
-    background-color: #111;
+    top: 120;
+    left: 10;
+    background-color: #eee;
     overflow-x: hidden;
-    padding-top: 20px;
-    border: none;
+    padding: 8px 0;
 }
 
-/* Style the buttons that are used to open the tab content */
-.tab button {
+/* The navigation menu links */
+.sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 16px;
-    color: #818181;
+    color: #2196F3;
     display: block;
-    background-color: inherit;
-    border: none;
-    outline: none;
     cursor: pointer;
-    width: 100%;
-    text-align: left;
     transition: 0.3s;
-    float: none;
-
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-    color: #f1f1f1;
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #064579;
 }
 
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #04aa6d;
-    color: #f1f1f2;
+/* Active link styling */
+.sidenav a.active {
+    color: #064579;
+    font-weight: bold;
+}
+
+/* Style page content */
+.main {
+    margin-left: 140px;
+    padding: 0px 10px;
 }
 
 /* Style the tab content */
 .tabcontent {
     display: none;
     padding: 16px;
-    margin-left: 160px;
-    border: 1px solid #ccc;
-}
-
-/* Page content */
-.content {
-    margin-left: 160px;
-    padding: 16px;
-}
-
-nav a {
-    color: #007BFF;
-    margin: 0 10px;
-    text-decoration: none;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-main {
-    padding: 20px;
 }
 
 footer {
@@ -124,11 +101,10 @@ footer {
 
 /* On smaller screens */
 @media screen and (max-height: 450px) {
-    .tab {
+    .sidenav {
         padding-top: 15px;
     }
-    .tab button {
-        padding: 6px 8px 6px 16px;
+    .sidenav a {
         font-size: 14px;
     }
 }
